you accidentally a word

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -37,7 +37,7 @@
 
 
 \subsection{Allele frequencies}
-Consider a diploid autosomal locus segregating two alleles ($1$ and $2$). Let's say that the $f_{11}$ is the frequency of $11$ homozygotes and $f_{12}$ is the frequency of $12$ heterozygotes. The frequency of allele $1$ in the population is
+Consider a diploid autosomal locus segregating two alleles ($1$ and $2$). Let's say that $f_{11}$ is the frequency of $11$ homozygotes and $f_{12}$ is the frequency of $12$ heterozygotes. The frequency of allele $1$ in the population is
 \begin{equation}
 p = f_{11} + f_{12}/2
 \end{equation}
