More testing. Split a sentence into two.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -100,7 +100,7 @@ one allele identical by descent at a locus (assuming that the two
 parents of the child are randomly mated individuals from the population).\\
 
 A key quantity is the probability that our pair of individuals share
-0, 1, or 2 alleles identical by descent, we denote these probabilities
+0, 1, or 2 alleles identical by descent. We denote these probabilities
 by $r_0$, $r_1$, and $r_2$ respectively. See Table \ref{table:IBDprobs} for
 some examples. \\
 
