added paragraph on why only additive effect usually matters

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -371,6 +371,19 @@ the allele that our individual received from her mother (maternal
 alleles) and father (paternal alleles) respectively. This will come in
 handy in just a moment when we start thinking about the phenotype covariance of relatives.\\
 
+Now obviously this model seems silly at first sight as alleles don't
+only act in an additive manner, as they interact with alleles at the
+same loci (dominance) and at different loci (epistasis). Later we'll
+relax this assumption, 
+however, we'll find that for our interests in evolutionary change actually it is only the ``additive
+component'' of genetic variation that will concern us. 
+We will define this more formally later on, but for the moment 
+we can offer the intuition that parents only get to pass on a single
+allele at each locus on to the next generation. As such, it is the
+effect of these transmitted alleles, averaged over possible matings,
+that is an individual's average contribution  to the next generation
+(i.e. the additive effect of the alleles that their genotype consists of).
+
 
 \subsubsection{Additive genetic variance and heritability}
 As we are talking about an additive genetic model we'll talk about the
