corrected phenotype of X->Y \, thanks KL

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -326,7 +326,7 @@ evolutionary change in quantitative phenotypes in response to selection. \\
 Let's imagine that the genetic component of the variation in our trait
 is controlled by $L$ autosomal loci that act in an additive manner. The frequency of allele $1$ at locus $l$ is $p_l$, with each copy of
 allele $1$ at this locus increasing your trait value by $a_l$.
-The phenotype of an individual, let's call her $i$, is $Y_i$.
+The phenotype of an individual, let's call her $i$, is $X_i$.
 Her genotype at SNP $l$, is
 $G_{i,l}$. Here $G_{i,l}=0,~1,$ or $2$  represents the number of copies of allele $1$ she
 has at this SNP. Her expected phenotype, given her genotype, is then
@@ -605,6 +605,8 @@ $A_{ij}=F_{i,j}$. Given the matrix $A$ we can estimate $V_A$. We can
 also add fixed effects into this model to account for generation
 effects, additional mixed effects could also be included to account
 for shared environments between particular individuals (e.g. a shared nest).
+This is sometimes called the ``animal model'', and also goes by the
+name of variance components analysis.
 
 \paragraph{Multiple traits.}
 
