fixed typo in mut-selection balance

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -1362,7 +1362,7 @@ recessive ($h=1$, and allele $2$ is dominant).
 
 We can then rewrite \eqref{deltap_dip2} as
 \begin{equation}
-\Delta p = \frac{p_tq_t (p_ths + qs(1-h)}{\wbar}.  \label{deltap_direct}
+\Delta p = \frac{p_tq_t (p_ths + qs(1-h))}{\wbar}.  \label{deltap_direct}
 \end{equation}
 where
 \begin{equation}
@@ -1549,7 +1549,7 @@ completely recessive $h>0$. We'll be interested in the case where our allele $2$
 the population i.e. $q \ll 1$, which means that the change in
 frequency of allele $2$, due to selection ($\Delta_S q$) can be written as
 \begin{equation}
-\Delta_S q = \frac{pq(\wbar_2 - \wbar_1)}{\wbar}  \approx 2 hs q
+\Delta_S q = \frac{pq(\wbar_2 - \wbar_1)}{\wbar}  \approx  -hs q
 \end{equation}
 which can be found by assuming that $q^2 \approx 0$, $p \approx 1$,
 and that $\wbar \approx w_1$. So selection is acting to reduce the
