fixed typo in hitchhiking section

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -1375,7 +1375,8 @@ One special case is when $s_{12}=s_{22}/2$
 \end{equation}
 for values of $s \ll 1$ then the denominator is close to $1$ and this
 is of exactly the same form as our haploid model and so if $s$ is
-constant our trajectory follows a logistic growth curve of the form \eqref{eq:haploid_logistic growth}.
+constant our trajectory follows a logistic growth curve of the form
+\eqref{eq:haploid_logistic growth}. \gc{ADD NOTE HERE}
 Thus we can show that it takes
 \begin{equation}
 \approx 2 log(2N)/s
@@ -2814,7 +2815,7 @@ e^{-r(1-X(j))}$, such that
 p_{NR}=\prod_{j=1}^{\tau} \left(1- r(1-X(j))\right) \approx \exp
 \left( -r\sum_{j=1}^{\tau}
 1- X(j) \right) =\exp
-\left( -r \tau 1-\widehat{X} \right)
+\left( -r \tau (1-\widehat{X}) \right)
 \end{equation}
 where
 $\widehat{X}$ is the average frequency of the derived allele across the trajectory
